-update mouse set_cursor to use cursor data.
-update transform rotozoom to optimize.
-update surface area blit to optimize.
-update display update method to optimize.
-add util timer for profiling.
-update draw arc with dimension adjustment.
-update time clock for accuracy.
-revise with absolute import statements.
-update font with rendering adjustment.

0.27    2015-04-12
-update font to enhance fonts access.
-update image load to allow file-like argument.
-update draw methods to int convert argument.
-add mask.toString method.
-add rect iter method.
-add rect collide methods - collidelistall, collidedict, and collidedictall.
-add sprite collide methods - collide_rect_ratio, collide_circle, and collide_circle_ratio.
-add mousewheel event listener.
-released under MIT license.

0.26    2014-11-09
-add rect union methods.
-update methods to use rect intersection.
-update surface blit rect computation.
-update initialization to stabilize timing.
-add rect rectPool to utilize a rect pool.
-update sprite draw for performance.
-update sprite collide methods processing.
-add rect clamp methods.
-update mixer write for non-integral frames.
-update mixer quit to properly stop thread.
-add mouse set_visible method.

0.25    2014-08-20
-update mixer thread interrupt.
-update handling of display surface graphics2d object.
-update display.set_mode to accept additional arguments.
-add display set_caption/set_icon to set JFrame title/icon.
-add display.get_active method.
-update event object constructor to properly handle arguments.
-add key.get_mods method.
-update mouse.get_pressed to properly return state of all buttons.
-restructured event handler to capture all mouse motion events.
-add event member buttons.
-change event key location to event.loc (KEY_LOCATION_LEFT|RIGHT|STANDARD|NUMPAD|UNKNOWN).
-correct event.pump to maintain queue.
-add event.dict access.
-update mouse.get_rel process on frame exit.
-update event.rel to properly return with multiple access.