@@ -16,6 +16,8 @@
 -update time clock for accuracy.
 -revise with absolute import statements.
 -update font with rendering adjustment.
+-update event peek option of all types.
+-update event methods to optimize.
 
 0.27    2015-04-12
 -update font to enhance fonts access.
